--- a/06_Shop_Onepage/assets/css/style.css
+++ b/06_Shop_Onepage/assets/css/style.css
@@ -1665,3 +1665,19 @@ a{color:black;}
 .logo img{
     max-height:65px;
 }
+.box-category .subDropdown {
+    top: 14px;
+    right: 18px;
+    position: absolute;
+    cursor: pointer;
+    width: 16px;
+    height: 16px;
+    padding: 2px;
+}
+.box-category .subDropdown.plus {
+    background-image: url(//media.anpero.com/images/38/102018/plus-blue2018100613560299.png);
+}
+
+.box-category .subDropdown.minus {
+    background-image: url(//media.anpero.com/images/38/102018/minus-blue2018100614211640.png);
+}
