--- a/04_Shop_multiProduct/Views/Shared/article/_MenuAndAdsPartial.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/article/_MenuAndAdsPartial.cshtml
@@ -17,7 +17,7 @@
     {
     <div class="block left-module">
         <h2 class="page-heading">
-            <span class="page-heading-title">Các chuên mục</span>
+            <span class="page-heading-title">Các chuyên mục</span>
 
         </h2>
         <div class="block_content">
