--- a/04_Shop_multiProduct/Views/Shared/product/_productDetail.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/product/_productDetail.cshtml
@@ -60,11 +60,11 @@
                         Trạng thái:
                         @if (item.IsInstock)
                         {
-                            <span class="in-stock">Sẵn sàn</span>
+                            <span class="in-stock">Sẵn hàng</span>
                         }
                         else
                         {
-                            <span class="in-stock">Đang bận</span>
+                            <span class="in-stock">Hết hàng</span>
                         }
                     </p>
                     <p>Tình trạng: mới</p>
