--- a/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
@@ -81,7 +81,7 @@
                                 {
                                    
                                     <li><a href="#about">Về chúng tôi</a></li>
-                                    <li><a href="#philosophy">Công nghệ</a></li>                                    
+                                    <li><a href="#philosophy">Bản đồ</a></li>                                    
                                     <li><a href="/blog">Hướng dẫn</a></li>
                                     <li><a href="#contact">Liên hệ</a></li>
                                     <li><a href="/products" title="Sản phẩm">Sản phẩm</a></li>
@@ -91,7 +91,7 @@
                                 {
                                   
                                     <li><a href="/#about">Về chúng tôi</a></li>
-                                    <li><a href="/#philosophy">Công nghệ</a></li>
+                                    <li><a href="/#philosophy">Bản đồ</a></li>
                                     <li><a href="/blog">Hướng dẫn</a></li>
                                     <li><a href="/#contact">Liên hệ</a></li>
                                     <li><a href="/products" title="Sản phẩm">Sản phẩm</a></li>
