--- a/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
@@ -49,6 +49,7 @@
     <link rel="dns-prefetch" href="https://www.facebook.com/">
     <link href='/static/css' rel='stylesheet' type='text/css'>
     @*<link href="/assets/css/blue-style.css" rel="stylesheet" />*@
+    <link href="/assets/css/Green-style.css" rel="stylesheet" />
     @*AMP*@
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <style amp-boilerplate>
