--- a/06_Shop_Onepage/assets/css/responsive.css
+++ b/06_Shop_Onepage/assets/css/responsive.css
@@ -46,9 +46,10 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px) {
-    .single-photography .photography-icon{
-        float:left;
-        margin-right:15px;
+    .single-photography .photography-icon {
+        clear: both;
+        float: left;
+        margin-right: 15px;
     }
     .products-list .product-shop {
         width: 100%;
