--- a/04_Shop_multiProduct/Views/Shared/product/_MenuAndAdsPartial.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/product/_MenuAndAdsPartial.cshtml
@@ -266,7 +266,7 @@
     }
 }
 
-<div class="block left-module">
+@*<div class="block left-module">
     <p class="title_block">KHÁCH HÀNG NÓI VỀ CHÚNG TÔI</p>
     <div class="block_content">
         <div>
@@ -326,7 +326,7 @@
             </ul>
         </div>
     </div>
-</div>
+</div>*@
 
 
 
