--- a/04_Shop_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -16,11 +16,12 @@
             {
                 <a href="@commonInfo.FaceBookLink" target="_blank"><i class="fa fa-facebook"></i></a>
             }
-            
+           
         </div>
-        <div class="support-link">
-            <a href="/about">Thông tin cửa hàng</a>
+        <div class="support-link">            
             <a href="/home/contact">Hỗ trợ</a>
+             <a href="javascript:doGTranslate('vi|vi');" title="Dịch sang tiếng Việt" class="notranslate">Tiếng Việt </a>
+            <a href="javascript:doGTranslate('vi|en');" title="Dịch sang tiếng anh" class="notranslate">English</a>
         </div>
     </div>
 </div>
