--- a/04_Shop_multiProduct/Views/Product/Category.cshtml
+++ b/04_Shop_multiProduct/Views/Product/Category.cshtml
@@ -34,7 +34,6 @@
                                         <span>list</span>
                                     </li>
                                 </ul>
-                                
                                 <ul class="row product-list grid">
                                     @foreach (AnperoFrontend.WebService.ProductItem item in productList.Item)
                                     {
@@ -136,91 +135,93 @@
                         AnperoFrontend.WebService.SearchResult productList = (AnperoFrontend.WebService.SearchResult)ViewData["productList"];
                         if (productList.Item.Length > 0)
                         {
-                    <div id="view-product-list" class="view-product-list" itemscope itemtype="http://schema.org/ItemList">
-                        <h2 class="page-heading">
-                            <span class="page-heading-title">@ViewBag.Title</span>
-                        </h2>
-                        <ul class="display-product-option">
-                            <li class="view-as-grid selected">
-                                <span>grid</span>
-                            </li>
-                            <li class="view-as-list">
-                                <span>list</span>
-                            </li>
-                        </ul>
-                        <div>
-                         @Html.Raw(ViewBag.Desc)
-                        </div>
-                        <ul class="row product-list grid" id="prListContent" itemprop="itemListElement" itemscope itemtype="http://schema.org/Product">
-                            @foreach (AnperoFrontend.WebService.ProductItem item in productList.Item)
-                            {
-                                <li class="col-sx-12 col-sm-4">
-                                    <div class="product-container">
-                                        <div class="left-block">
-                                            <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)" itemprop="url">
-                                                <img class="img-responsive" alt="@item.PrName" src="@item.Images" itemprop="image" />
-                                                @if (item.Rank > 1)
-                                                {
-                                                    <div class="featured-text"><span>Bán chạy</span></div>
-                                                }
-                                            </a>
-                                            @if (item.IsSale)
-                                            {
-                                                <div class="price-percent-reduction2">- @Convert.ToInt32(((item.Price - item.SalePrice) / item.Price) * 100) %</div>
-                                            }
-                                            <div class="quick-view">
-                                                <a title="Quick view" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)"></a>
-                                            </div>
-                                            <div class="add-to-cart">
-                                                <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,'@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price)','@(item.Images)','@item.PrName')">thêm vào giỏ hàng</a>
-                                            </div>
-                                        </div>
-                                        <div class="right-block">
-                                            <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)">@item.PrName</a></h5>
-                                            @if (item.Rank > 1)
-                                            {
-                                                <div class="product-star">
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star-half-o"></i>
-                                                </div>
-                                            }
-                                            @if (item.IsSale)
-                                            {
-                                                <div class="content_price" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-                                                    <span class="price product-price" itemprop="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span>
-                                                    <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)</span>
-                                                </div>
-                                            }
-                                            else
-                                            {
-                                                <div class="content_price">
-                                                    <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ</span>
-                                                </div>
-                                            }
-                                            <div class="info-orther">
-                                                <p>Item Code: # @item.Id</p>
-                                                @if (item.IsInstock)
-                                                {
-                                                    <p class="availability">Trạng thái: <span>Còn hàng</span></p>
-                                                }
-                                                else
-                                                {
-                                                    <p class="availability">Trạng thái: <span>Hết hàng</span></p>
-                                                }
-                                                <div class="product-desc">
-                                                    @Html.Raw(item.ShortDesc)
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-                            }
-                        </ul>
+                            <div id="view-product-list" class="view-product-list" itemscope itemtype="http://schema.org/ItemList">
+                                <h2 class="page-heading">
+                                    <span class="page-heading-title">@ViewBag.Title</span>
+                                </h2>
+                                <ul class="display-product-option">
+                                    <li class="view-as-grid selected">
+                                        <span>grid</span>
+                                    </li>
+                                    <li class="view-as-list">
+                                        <span>list</span>
+                                    </li>
+                                </ul>
+                                @if (!string.IsNullOrEmpty(ViewBag.Desc))
+                                {
+                                    <div class="cat-short-desc">@Html.Raw(ViewBag.Desc)</div>
+                                }
 
-                    </div>
+                                <ul class="row product-list grid" id="prListContent" itemprop="itemListElement" itemscope itemtype="http://schema.org/Product">
+                                    @foreach (AnperoFrontend.WebService.ProductItem item in productList.Item)
+                                    {
+                                        <li class="col-sx-12 col-sm-4">
+                                            <div class="product-container">
+                                                <div class="left-block">
+                                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)" itemprop="url">
+                                                        <img class="img-responsive" alt="@item.PrName" src="@item.Images" itemprop="image" />
+                                                        @if (item.Rank > 1)
+                                                        {
+                                                            <div class="featured-text"><span>Bán chạy</span></div>
+                                                        }
+                                                    </a>
+                                                    @if (item.IsSale)
+                                                    {
+                                                        <div class="price-percent-reduction2">- @Convert.ToInt32(((item.Price - item.SalePrice) / item.Price) * 100) %</div>
+                                                    }
+                                                    <div class="quick-view">
+                                                        <a title="Quick view" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)"></a>
+                                                    </div>
+                                                    <div class="add-to-cart">
+                                                        <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,'@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price)','@(item.Images)','@item.PrName')">thêm vào giỏ hàng</a>
+                                                    </div>
+                                                </div>
+                                                <div class="right-block">
+                                                    <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)">@item.PrName</a></h5>
+                                                    @if (item.Rank > 1)
+                                                    {
+                                                        <div class="product-star">
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star-half-o"></i>
+                                                        </div>
+                                                    }
+                                                    @if (item.IsSale)
+                                                    {
+                                                        <div class="content_price" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+                                                            <span class="price product-price" itemprop="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span>
+                                                            <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)</span>
+                                                        </div>
+                                                    }
+                                                    else
+                                                    {
+                                                        <div class="content_price">
+                                                            <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ</span>
+                                                        </div>
+                                                    }
+                                                    <div class="info-orther">
+                                                        <p>Item Code: # @item.Id</p>
+                                                        @if (item.IsInstock)
+                                                        {
+                                                            <p class="availability">Trạng thái: <span>Còn hàng</span></p>
+                                                        }
+                                                        else
+                                                        {
+                                                            <p class="availability">Trạng thái: <span>Hết hàng</span></p>
+                                                        }
+                                                        <div class="product-desc">
+                                                            @Html.Raw(item.ShortDesc)
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    }
+                                </ul>
+
+                            </div>
                             <div class="sortPagiBar">
                                 <div class="bottom-pagination">
                                     <nav>
