--- a/04_Shop_multiProduct/Views/Shared/_partial/_HomeSlide_1.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_partial/_HomeSlide_1.cshtml
@@ -1,5 +1,5 @@
 ﻿@using AnperoFrontend.WebService;
-
+<div class="row">
     <div class="col-sm-12 col-md-12">
         <div class="homeslider">
             @if (ViewData["slide"] != null)
@@ -78,5 +78,6 @@
             }
         </div>
     </div>
+</div>
 
 
