--- a/04_Shop_multiProduct/Views/Home/Index.cshtml
+++ b/04_Shop_multiProduct/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
     <div class="col-xs-12 col-sm-12 col-md-9">
         @if (!Request.Browser.IsMobileDevice)
         {
-            <diSv class="row">
+            <div class="row">
                 <div id="home-slider" style="margin-top:5px;" class="col-md-12">
                     @switch (commonInfo.ThemeOption)
                     {
@@ -30,7 +30,7 @@
                             break;
                     }
                 </div>
-            </diSv>
+            </div> 
         }
         <div class="row">
             <div class="col-md-12">
